build: build jre image for production