@@ -21,8 +21,22 @@ RUN chmod +x -R ${TMP_DIR}/bin/
 RUN chmod 0775 ${TMP_DIR} ${TMP_DIR}/data
 
 # Building prod image
-FROM eclipse-temurin:17 as prod
-RUN echo "running PROD pre-install commands"
+FROM eclipse-temurin:17 as jre-build
+
+# Create a custom Java runtime
+RUN $JAVA_HOME/bin/jlink \
+   --add-modules ALL-MODULE-PATH \
+   --strip-debug \
+   --no-man-pages \
+   --no-header-files \
+   --compress=2 \
+   --output jre17-with-all-modules
+
+# Define your base image
+FROM debian:buster-slim as prod
+ENV JAVA_HOME=/opt/java/openjdk
+ENV PATH "${JAVA_HOME}/bin:${PATH}"
+COPY --from=jre-build /jre17-with-all-modules $JAVA_HOME
 
 # Building dev image
 FROM eclipse-temurin:17 as dev
